# servant-codec

./: Cargo.toml  README.md
examples/aead/: main.rs
examples/length/: main.rs
src/aead_codec/: aead.rs
src/utility/: rng.rs  type_of.rs
