[package]
name = "servant-codec"
version = "0.1.0"
authors = ["automan.yang <automanyang@gmail.com>"]
description = "servant-code是servant的网络层编码库，基于futures_codec库。"
repository = "https://github.com/automanyang/servant-codec"
readme = "README.md"
keywords = ["network", "codec"]
categories = ["network-programming"]
license = "MIT"
# license-file = "LICENSE-MIT"
edition = "2018"

[dependencies]
futures_codec = "^0.3.4"
bytes = "^0.5.3"
ring = "^0.16"
byteorder= "^1.3.2"
serde = { version = "^1.0",features = ["derive"]}
bincode = { version = "^1.2.1" }

[dev-dependencies]
futures = "^0.3.1"
test-case = "1.0.0-alpha-1"